fixed scrollbar and started with php message collection

--- a/_include/messages-css.css
+++ b/_include/messages-css.css
@@ -64,7 +64,7 @@
     resize: none;
     padding: 10px;
     border: none;
-    width: 80%;
+    width: 85%;
     height: 100%;
     box-sizing: border-box;
 }
@@ -77,7 +77,7 @@
     color: var(--btn-primary-color);
     border: none;
     padding: 10px;
-    width: 20%;
+    width: 15%;
     height: 100%;
     cursor: pointer;
     box-sizing: border-box;
@@ -100,22 +100,22 @@
 }
 
 /* width */
-::-webkit-scrollbar {
+#message-container::-webkit-scrollbar {
     width: 10px;
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+#message-container::-webkit-scrollbar-track {
     background: #f1f1f1; 
 }
  
 /* Handle */
-::-webkit-scrollbar-thumb {
+#message-container::-webkit-scrollbar-thumb {
     background: #888; 
 }
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+#message-container::-webkit-scrollbar-thumb:hover {
     background: #555; 
 }
 
